--- a/02-tidy_intro.Rmd
+++ b/02-tidy_intro.Rmd
@@ -6,21 +6,21 @@ library(tidyverse)
 
 ## Required
 
-The following packages must be installed before starting this chapter.
-
-| Required Packages |
-|-------------------|
-|tidyverse          |
-
-
-The following data files are used in this chapter:
+The following data files below used in this chapter. The files are available at: https://github.com/dstanley4/psyc6060bookdown
 
 | Required Data |
 |-------------------|
 |data_okcupid.csv   |
 |data_experiment.csv   |
 
-The files are available at: https://github.com/dstanley4/psyc6060bookdown
+
+The following CRAN packages must be installed:
+
+| Required CRAN Packages |
+|-------------------|
+|tidyverse          |
+
+
 
 ## Objective
 
