--- a/03-enter_load.Rmd
+++ b/03-enter_load.Rmd
@@ -6,20 +6,9 @@ library(tidyverse)
 
 ## Required Packages
 
-The following packages must be installed before starting this chapter.
 
-| Required Packages |
-|-------------------|
-|apaTables          |
-|HMisc              |
-|janitor            |
-|psych              |
-|skimr              |
-|tidyverse          |
+The following data files below used in this chapter. The files are available at: https://github.com/dstanley4/psyc6060bookdown
 
-**Important Note:** You should NOT use library(psych) at any point! There are major conflicts between the psych package and the tidyverse. We will access the psych package commands by preceding each command with psych:: instead of using library(psych).
-
-The following data files are used in this chapter:
 
 | Required Data |
 |-------------------|
@@ -29,8 +18,19 @@ The following data files are used in this chapter:
 |data_item_scoring.csv |
 |data_item_time.csv |
 
-The files are available at: https://github.com/dstanley4/psyc6060bookdown
 
+The following CRAN packages must be installed:
+
+| Required CRAN Packages |
+|-------------------|
+|apaTables          |
+|HMisc              |
+|janitor            |
+|psych              |
+|skimr              |
+|tidyverse          |
+
+**Important Note:** You should NOT use library(psych) at any point! There are major conflicts between the psych package and the tidyverse. We will access the psych package commands by preceding each command with psych:: instead of using library(psych).
 
 
 ## Objective
