--- a/05-samples.Rmd
+++ b/05-samples.Rmd
@@ -1,6 +1,27 @@
 # Samples
 
-packages required etc.
+The following CRAN packages must be installed:
+
+| Required CRAN Packages |
+|-------------------|
+|tidyverse          |
+|remotes          |
+
+The following GitHub packages must be installed:
+
+| Required GitHub Packages |
+|--------------------------|
+|dstanley4/learnSampling |
+
+
+A GitHub package can be installed using the code below:
+
+```{r, eval = FALSE}
+remotes::install_github("dstanley4/learnsampling")
+```
+
+
+## Overview
 
 Researchers are usually interested in describing the attributes of a population; numbers that describe the population are called parameters. Two parameters that are frequently of interest are the mean and variance of the population.  Unfortunately,  it’s rarely possible to obtain information from every member of a population to calculate a parameter. Consequently, researchers use subsets of the population called samples to estimate parameters. Numbers calculated from sample data are called statistics. Typically, sample statistics are used to estimate population parameters.
 
