--- a/06-graphing.Rmd
+++ b/06-graphing.Rmd
@@ -1,12 +1,25 @@
 # Graphing
+## Required
+
+The following data files below are used in this chapter. The files are available at: https://github.com/dstanley4/psyc6060bookdown
+
+| Required Data |
+|-------------------|
+|data_movies.csv |
+
+
+The following packages CRAN must be installed:
+
+| Required CRAN Packages |
+|-------------------|
+|tidyverse          |
+
+
 
 ```{r, include = FALSE}
 library(tidyverse)
 ```
 
-```{r}
-library(tidyverse)
-```
 
 ## Data 
 
@@ -15,6 +28,7 @@ To learn about making graphs using the tidyverse we use movie data rating and bo
 We begin by loading data_movies.csv  using read_csv(), not read.csv():
 
 ```{r, include=FALSE}
+library(tidyverse)
 movie_data <- read_csv("data_movies.csv")
 ```
 
@@ -630,8 +644,9 @@ knitr::include_graphics("ch_graphing/images/logo_color_graph.png")
 ```
 
 
+## Emoji
 
-### Emoji
+### Installation
 
 Make the graph more fun with the emoGG package. You might like to make the graph more fun by putting tomatoes on the graph to indicate what the extra numbers mean. We can do that with the emoGG package. You can install the emoGG package with the commands below:
 
@@ -645,7 +660,7 @@ Activate the emoGG package:
 library(emoGG)
 ```
 
-### Check out the codes for emoji
+### Codes for emoji
 
 Visit this link to check out the codes for emoji: https://apps.timwhitlock.info/emoji/tables/unicode
 
