--- a/docs/bookdown.tex
+++ b/docs/bookdown.tex
@@ -303,10 +303,10 @@ I used the \textbf{knitr}\index{knitr} package \citep{xie2015} and the \textbf{b
 ##   matrixcalc_1.0.3         MBESS_4.7.0             
 ##   methods_4.0.2            mgcv_1.8.31             
 ##   mi_1.0                   mime_0.9                
-##   minqa_1.2.4              mnormt_2.0.0            
+##   minqa_1.2.4              mnormt_2.0.1            
 ##   modelr_0.1.8             munsell_0.5.0           
 ##   mvtnorm_1.1.1            nlme_3.1-148            
-##   nloptr_1.2.2.1           nnet_7.3-14             
+##   nloptr_1.2.2.2           nnet_7.3-14             
 ##   numDeriv_2016.8.1.1      OpenMx_2.17.4           
 ##   openssl_1.4.1            packrat_0.5.0           
 ##   parallel_4.0.2           pbapply_1.4.2           
@@ -318,7 +318,7 @@ I used the \textbf{knitr}\index{knitr} package \citep{xie2015} and the \textbf{b
 ##   progress_1.2.2           proto_1.0.0             
 ##   ps_1.3.3                 psych_1.9.12.31         
 ##   purrr_0.3.4              R6_2.4.1                
-##   RColorBrewer_1.1-2       Rcpp_1.0.4.6            
+##   RColorBrewer_1.1-2       Rcpp_1.0.5              
 ##   RcppEigen_0.3.3.7.0      RcppParallel_5.0.2      
 ##   RCurl_1.98-1.2           readr_1.3.1             
 ##   readxl_1.3.1             rematch_1.0.1           
@@ -1114,18 +1114,7 @@ Congratulations! You've reached the end of the introduction to R. Take a break, 
 \hypertarget{required}{%
 \section{Required}\label{required}}
 
-The following packages must be installed before starting this chapter.
-
-\begin{longtable}[]{@{}l@{}}
-\toprule
-Required Packages\tabularnewline
-\midrule
-\endhead
-tidyverse\tabularnewline
-\bottomrule
-\end{longtable}
-
-The following data files are used in this chapter:
+The following data files below used in this chapter. The files are available at: \url{https://github.com/dstanley4/psyc6060bookdown}
 
 \begin{longtable}[]{@{}l@{}}
 \toprule
@@ -1137,7 +1126,16 @@ data\_experiment.csv\tabularnewline
 \bottomrule
 \end{longtable}
 
-The files are available at: \url{https://github.com/dstanley4/psyc6060bookdown}
+The following CRAN packages must be installed:
+
+\begin{longtable}[]{@{}l@{}}
+\toprule
+Required CRAN Packages\tabularnewline
+\midrule
+\endhead
+tidyverse\tabularnewline
+\bottomrule
+\end{longtable}
 
 \hypertarget{objective}{%
 \section{Objective}\label{objective}}
@@ -2185,25 +2183,7 @@ In short, you should always use tibbles (i.e., use read\_csv() not read.csv()). 
 \hypertarget{required-packages}{%
 \section{Required Packages}\label{required-packages}}
 
-The following packages must be installed before starting this chapter.
-
-\begin{longtable}[]{@{}l@{}}
-\toprule
-Required Packages\tabularnewline
-\midrule
-\endhead
-apaTables\tabularnewline
-HMisc\tabularnewline
-janitor\tabularnewline
-psych\tabularnewline
-skimr\tabularnewline
-tidyverse\tabularnewline
-\bottomrule
-\end{longtable}
-
-\textbf{Important Note:} You should NOT use library(psych) at any point! There are major conflicts between the psych package and the tidyverse. We will access the psych package commands by preceding each command with psych:: instead of using library(psych).
-
-The following data files are used in this chapter:
+The following data files below used in this chapter. The files are available at: \url{https://github.com/dstanley4/psyc6060bookdown}
 
 \begin{longtable}[]{@{}l@{}}
 \toprule
@@ -2218,7 +2198,23 @@ data\_item\_time.csv\tabularnewline
 \bottomrule
 \end{longtable}
 
-The files are available at: \url{https://github.com/dstanley4/psyc6060bookdown}
+The following CRAN packages must be installed:
+
+\begin{longtable}[]{@{}l@{}}
+\toprule
+Required CRAN Packages\tabularnewline
+\midrule
+\endhead
+apaTables\tabularnewline
+HMisc\tabularnewline
+janitor\tabularnewline
+psych\tabularnewline
+skimr\tabularnewline
+tidyverse\tabularnewline
+\bottomrule
+\end{longtable}
+
+\textbf{Important Note:} You should NOT use library(psych) at any point! There are major conflicts between the psych package and the tidyverse. We will access the psych package commands by preceding each command with psych:: instead of using library(psych).
 
 \hypertarget{objective-1}{%
 \section{Objective}\label{objective-1}}
@@ -5046,7 +5042,39 @@ You can visualize any \(\delta\) value (i.e., population \(d\)-value) using the 
 \hypertarget{samples}{%
 \chapter{Samples}\label{samples}}
 
-packages required etc.
+The following CRAN packages must be installed:
+
+\begin{longtable}[]{@{}l@{}}
+\toprule
+Required CRAN Packages\tabularnewline
+\midrule
+\endhead
+tidyverse\tabularnewline
+remotes\tabularnewline
+\bottomrule
+\end{longtable}
+
+The following GitHub packages must be installed:
+
+\begin{longtable}[]{@{}l@{}}
+\toprule
+Required GitHub Packages\tabularnewline
+\midrule
+\endhead
+dstanley4/learnSampling\tabularnewline
+\bottomrule
+\end{longtable}
+
+A GitHub package can be installed using the code below:
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{remotes}\OperatorTok{::}\KeywordTok{install_github}\NormalTok{(}\StringTok{"dstanley4/learnsampling"}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\hypertarget{overview}{%
+\section{Overview}\label{overview}}
 
 Researchers are usually interested in describing the attributes of a population; numbers that describe the population are called parameters. Two parameters that are frequently of interest are the mean and variance of the population. Unfortunately, it's rarely possible to obtain information from every member of a population to calculate a parameter. Consequently, researchers use subsets of the population called samples to estimate parameters. Numbers calculated from sample data are called statistics. Typically, sample statistics are used to estimate population parameters.
 
@@ -5194,7 +5222,7 @@ Each row of many\_samples represents a sample of 10 people. Each column of many\
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown_files/figure-latex/unnamed-chunk-215-1.pdf}
+\includegraphics{bookdown_files/figure-latex/unnamed-chunk-216-1.pdf}
 
 You can see the 5000 sample means, from the sample.mean column, plotted in this graph. Recall the population mean for heights is \(\mu = 172.48\) cm. Notice that most of the sample means cluster around this value. Also notice there is considerable variability about this value. Any given sample mean (\(\bar{x}\)) may differ substantially from the population mean (\(\mu = 172.48\)). This variability illustrates the challenges with learning something from a single study - particularly a study with a small sample size. Many of the sample means fall quite far from the population mean.
 
@@ -5542,28 +5570,28 @@ We can example the contents of many\_samples using the head() command. Each row 
 \end{Shaded}
 
 \begin{verbatim}
-##    study group.n    m1    m2    v1    v2 s2.1 s2.2   d
-## 1      1      10 187.2 160.1  92.2  66.8 80.4 58.9 3.0
-## 2      2      10 183.0 166.0 107.3  77.8 80.4 58.9 1.8
-## 3      3      10 181.0 168.8  39.8 144.2 80.4 58.9 1.3
-## 4      4      10 175.4 162.5  80.3  89.4 80.4 58.9 1.4
-## 5      5      10 184.1 163.6  91.0  28.9 80.4 58.9 2.6
-## 6      6      10 181.8 165.6  96.4 106.3 80.4 58.9 1.6
-## 7      7      10 176.6 167.0  97.2 161.6 80.4 58.9 0.8
-## 8      8      10 188.0 160.8 211.6 204.6 80.4 58.9 1.9
-## 9      9      10 185.3 165.8  54.7  91.5 80.4 58.9 2.3
-## 10    10      10 179.3 161.9  69.3  55.4 80.4 58.9 2.2
+##    study group.n    m1    m2     v1     v2 s2.1 s2.2    d
+## 1      1      10 187.2 160.1  92.18  66.77 80.4 58.9 3.04
+## 2      2      10 183.0 166.0 107.33  77.78 80.4 58.9 1.77
+## 3      3      10 181.0 168.8  39.78 144.18 80.4 58.9 1.27
+## 4      4      10 175.4 162.5  80.27  89.39 80.4 58.9 1.40
+## 5      5      10 184.1 163.6  90.99  28.93 80.4 58.9 2.65
+## 6      6      10 181.8 165.6  96.40 106.27 80.4 58.9 1.61
+## 7      7      10 176.6 167.0  97.16 161.56 80.4 58.9 0.84
+## 8      8      10 188.0 160.8 211.56 204.62 80.4 58.9 1.89
+## 9      9      10 185.3 165.8  54.68  91.51 80.4 58.9 2.28
+## 10    10      10 179.3 161.9  69.34  55.43 80.4 58.9 2.20
 ##    d.unbiased
-## 1         2.9
-## 2         1.7
-## 3         1.2
-## 4         1.3
-## 5         2.5
-## 6         1.5
-## 7         0.8
-## 8         1.8
-## 9         2.2
-## 10        2.1
+## 1        2.91
+## 2        1.69
+## 3        1.22
+## 4        1.34
+## 5        2.54
+## 6        1.54
+## 7        0.81
+## 8        1.81
+## 9        2.18
+## 10       2.11
 \end{verbatim}
 
 Recall the population level standardized mean difference, \(\delta\), was 1.49. We can see the extent to which the average the \(d\) and \(d_{unbiased}\) compare to this population-level values.
@@ -5604,13 +5632,13 @@ We can calculate the full range of sample-level \(d_{unbiased}\) values with the
 
 \begin{verbatim}
 ##   d_min d_max
-## 1  -0.2   5.2
+## 1 -0.16  5.15
 \end{verbatim}
 
 We see from the output that \(d_{unbiased}\) values were as small as -.20 and as large as 5.2. All of these values are estimates of the population level standardized mean difference of \(\delta = 1.49\). You can see that many of the sample-level estimates differed considerably from the population-level value. Indeed,
 
-\hypertarget{overview}{%
-\section{Overview}\label{overview}}
+\hypertarget{overview-1}{%
+\section{Overview}\label{overview-1}}
 
 In this chapter we have illustrated how a number of population parameter can be estimated by sample statistics. These are summarised below.
 
@@ -5705,11 +5733,30 @@ Cohen's \(d\) or SMD\strut
 \hypertarget{graphing}{%
 \chapter{Graphing}\label{graphing}}
 
-\begin{Shaded}
-\begin{Highlighting}[]
-\KeywordTok{library}\NormalTok{(tidyverse)}
-\end{Highlighting}
-\end{Shaded}
+\hypertarget{required-1}{%
+\section{Required}\label{required-1}}
+
+The following data files below are used in this chapter. The files are available at: \url{https://github.com/dstanley4/psyc6060bookdown}
+
+\begin{longtable}[]{@{}l@{}}
+\toprule
+Required Data\tabularnewline
+\midrule
+\endhead
+data\_movies.csv\tabularnewline
+\bottomrule
+\end{longtable}
+
+The following packages CRAN must be installed:
+
+\begin{longtable}[]{@{}l@{}}
+\toprule
+Required CRAN Packages\tabularnewline
+\midrule
+\endhead
+tidyverse\tabularnewline
+\bottomrule
+\end{longtable}
 
 \hypertarget{data}{%
 \section{Data}\label{data}}
@@ -6420,7 +6467,10 @@ If you are a really big geek (like me) you might look at the previous graph and 
 \includegraphics[width=0.6\linewidth]{ch_graphing/images/logo_color_graph}
 
 \hypertarget{emoji}{%
-\subsection{Emoji}\label{emoji}}
+\section{Emoji}\label{emoji}}
+
+\hypertarget{installation}{%
+\subsection{Installation}\label{installation}}
 
 Make the graph more fun with the emoGG package. You might like to make the graph more fun by putting tomatoes on the graph to indicate what the extra numbers mean. We can do that with the emoGG package. You can install the emoGG package with the commands below:
 
@@ -6439,8 +6489,8 @@ Activate the emoGG package:
 \end{Highlighting}
 \end{Shaded}
 
-\hypertarget{check-out-the-codes-for-emoji}{%
-\subsection{Check out the codes for emoji}\label{check-out-the-codes-for-emoji}}
+\hypertarget{codes-for-emoji}{%
+\subsection{Codes for emoji}\label{codes-for-emoji}}
 
 Visit this link to check out the codes for emoji: \url{https://apps.timwhitlock.info/emoji/tables/unicode}
 
